@@ -99,4 +99,5 @@
     <string id="30540">Play with...</string>
     <string id="30541">Show channel name in description</string>
     <string id="30542">rtmpe streams are not supported</string>
+    <string id="30543">Refresh</string>
 </strings>
