@@ -99,4 +99,5 @@
     <string id="30540">Abspielen mit...</string>
     <string id="30541">Kanalnamen in der Beschreibung anzeigen</string>
     <string id="30542">rtmpe streams werden leider nicht unterstützt</string>
+    <string id="30543">Aktualisieren</string>
 </strings>
